# training-eval-system

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  API_AUDIT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  WORKFLOW.md  docker-compose.dev.yml  task.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: c4306b4343a2_0001_initial.py  m0001_create_matviews.py  m0002_audit_triggers.py
backend/app/: __init__.py  main.py
backend/app/api/: _dev.py  account.py  audit.py  auth.py  chat.py  classes.py  courses.py  dashboard.py  deps.py  evaluations.py  grading.py  import_users.py  imports.py  llm.py  notifications.py  parse.py  profile.py  profiles.py  reports.py  similarity.py  task_edit.py  task_manage.py  tasks.py  templates.py  uploads.py  users.py  websockets.py
backend/app/cli/: __init__.py
backend/app/core/: audit_middleware.py  clock.py  config.py  crypto.py  database.py  exception_handlers.py  exceptions.py  lock.py  logging.py  middleware.py  redis.py  security.py  session_timeout.py  system_config.py
backend/app/llm/: base.py  client.py  factory.py  metrics.py  openai_compat.py  retry.py  scoring.py
backend/app/models/: __init__.py  audit.py  chat.py  course.py  evaluation.py  import_job.py  llm_config.py  notification.py  profile.py  similarity.py  system_config.py  task.py  template.py  upload.py  user.py
backend/app/parsers/: __init__.py  base.py  code_archive_parser.py  docx_parser.py  excel_parser.py  factory.py  ocr_parser.py  pdf_parser.py
backend/app/reporting/: __init__.py  chart_renderer.py  excel_renderer.py  pdf_renderer.py
backend/app/repositories/: base.py  llm_config_repo.py  org_repo.py  task_repo.py  upload_repo.py  user_repo.py
backend/app/schemas/: auth.py  evaluation.py  parse.py  profile.py  similarity.py  task.py  template.py  upload.py
backend/app/scripts/: seed.py
backend/app/services/: audit_service.py  auth_service.py  chat_agent.py  chat_service.py  chunked_upload.py  cleanup_service.py  dashboard_service.py  evaluation_service.py  import_service.py  scoring.py  (+15 more)
backend/cli/: __init__.py  main.py
backend/scripts/: count_tasks.py  lint_all.ps1  lint_all.sh  verify_real_data.py
backend/tests/: conftest.py
(+757 files in other folders)
