[project]
name = "tes-backend"
version = "0.1.0"
description = "智能实训评价管理系统 - 后端"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "structlog>=24.1",
  "passlib[bcrypt]>=1.7",
  "python-jose[cryptography]>=3.3",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "cryptography>=42.0",
  "redis>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "mypy>=1.9",
  "factory-boy>=3.3",
  "Faker>=24.0",
  "aiosqlite>=0.20",
  "freezegun>=1.4",
  "fakeredis[lua]>=2.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# RUF001/RUF002/RUF003: ambiguous fullwidth punctuation - false-positive for Chinese strings
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B017", "SIM117"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["pydantic.mypy"]
disallow_any_generics = true
warn_return_any = true
exclude = ["tests/.*", "alembic/.*"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*", "structlog.*", "factory.*", "faker.*", "freezegun.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "unit: 纯单元测试（无外部依赖）",
  "integration: 集成测试（需 PG/Redis）",
  "contract: 接口契约测试",
  "e2e: 端到端测试",
  "real_llm: 需要真实 LLM API",
  "slow: 慢测试",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = ["*/scripts/*", "*/migrations/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
